--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,12 +10,21 @@
     <div class="onedive">
         <nav class="main_nav">
             <h3 >Satish Prajapati</h3>
-            <ul>
+            <div class="side-menu-button" onclick="openButton()" style="background-image: url('menu_button.jpg');"></div>
+            <ul class="side-manu">
                 <li class="button"><a href="#">Resume</a></li>
                 <li class="button"><a href="#">Research</a></li>
                 <li class="button"><a href="#">home</a></li>
             </ul>
         </nav>
+        <div class="side-manu">
+            <div class="sidebar-colse-button" style="background-image: url('sidebar_colse_button.jpg');" onclick="closeButton()"></div>
+            <ul class="">
+                <li class="buttonn"><a href="#">Resume</a></li>
+                <li class="buttonn"><a href="#">Research</a></li>
+                <li class="buttonn"><a href="#">home</a></li>
+            </ul>
+        </div>
         <main>
             <section class="main_section">
                 <div  class="profile-img">
@@ -25,7 +34,7 @@
                 <div class="about" >
                     <h1 class="inline">Satish Prajapati</h1>
                     <h4 >A Bit About Me</h4>
-                    <p>Dalya Baron has a circular image of herself with a short about me text accompanied by circular (menu) button links to other sections
+                    <p>Dalya Baron has a circular  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi aspernatur esse, illum, sapiente numquam laudantium nostrum explicabo veritatis quae autem nemo ex ea architecto eum voluptatibus provident vitae, quisquam impedit ipsum magnam repellendus et quaerat. Deserunt, quisquam deleniti in amet aliquid eligendi minima ex minus sapiente reprehenderit temporibus facilis porro mollitia voluptatem quos quia. Accusantium libero eius aspernatur voluptas! Rem rerum aspernatur sed, accusamus laudantium possimus amet esse cum velit atque sint eligendi in dolorum, hic et cupiditate. Aspernatur deserunt, pariatur consequuntur asperiores nostrum, velit beatae perferendis ea enim error consectetur quis ipsum nobis ut praesentium rerum, voluptatibus soluta harum.image of herself with a short about me text accompanied by circular (menu) button links to other sections
                     While the entire website uses the same background, the footer is separated with a line, which is a nice, simplistic detail.
                     Note: Add your about me text on the home page, so everyone can quickly learn more about you.</p>
                 </div>
@@ -50,10 +59,11 @@
                 <h4>GitHub</h4>
                 <a href="https://github.com/Satish0r">Satish0r</a>
             </div>
-
-        </footer>
-        
+        </footer>      
     </div>
+<script src="script.js">
+
     
+</script>
 </body>
 </html>
